--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "3.6.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-text-input-mask": "3.1.5",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
