--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -40,6 +41,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.0",
     "react-test-renderer": "18.2.0"
   },
   "jest": {
