--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -10,6 +10,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -29,13 +30,13 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native/metro-config": "^0.72.11",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.0",
-    "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
-    "@types/react": "^18.0.24",
     "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^6.4.7",
     "react-test-renderer": "18.2.0"
