--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -81,7 +81,7 @@ jobs:
           disk-size: "10G"
           disable-animations: false
           avd-name: e2e_emulator
-          arch: x86_64
+          arch: arm64-v8a
           script: yarn test-example:android
       - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
