--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   test:
     name: ⚙️ Automated test cases
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
@@ -70,6 +70,11 @@ jobs:
       - name: Build app
         working-directory: e2e
         run: yarn build-example:android
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
@@ -81,7 +86,7 @@ jobs:
           disk-size: "10G"
           disable-animations: false
           avd-name: e2e_emulator
-          arch: arm64-v8a
+          arch: x86_64
           script: yarn test-example:android
       - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
