--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -26,6 +26,7 @@ jobs:
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
+      API_LEVEL: 28
     concurrency:
       group: android-e2e-${{ github.ref }}
       cancel-in-progress: true
@@ -75,11 +76,19 @@ jobs:
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
+      - name: AVD cache
+        uses: actions/cache@v3
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-${{ env.API_LEVEL }}
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
           working-directory: e2e
-          api-level: 28
+          api-level: ${{ env.API_LEVEL }}
           target: default
           profile: pixel_2
           ram-size: "4096M"
