--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -22,29 +22,30 @@ on:
 jobs:
   test:
     name: ⚙️ Automated test cases
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
+      API_LEVEL: 28
     concurrency:
       group: android-e2e-${{ github.ref }}
       cancel-in-progress: true
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18.x
           cache: "yarn"
-      - name: Setup JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: "microsoft"
-          java-version: "11"
+          java-version: "17"
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
       - name: Restore node_modules from cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -59,7 +60,7 @@ jobs:
       - name: Install e2e dependencies
         run: yarn install --cwd e2e
       - name: Restore Gradle cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
@@ -70,11 +71,24 @@ jobs:
       - name: Build app
         working-directory: e2e
         run: yarn build-example:android
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+      - name: AVD cache
+        uses: actions/cache@v4
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-${{ env.API_LEVEL }}
       - name: Run emulator and tests
-        uses: reactivecircus/android-emulator-runner@v2.28.0
+        uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
           working-directory: e2e
-          api-level: 28
+          api-level: ${{ env.API_LEVEL }}
           target: default
           profile: pixel_2
           ram-size: "4096M"
@@ -83,7 +97,7 @@ jobs:
           avd-name: e2e_emulator
           arch: x86_64
           script: yarn test-example:android
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
           name: android-fail-screen-shoots
