fix: keep large-packages and swap-storage

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -42,7 +42,9 @@ jobs:
           # all of these default to true, but feel free to set to
           # "false" if necessary for your workflow
           android: false
+          large-packages: false
           docker-images: false
+          swap-storage: false
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
