chore: free up all pre-installed tools (build anyway takes up to 4 mins)

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -35,16 +35,10 @@ jobs:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
-          # this might remove tools that are actually needed,
-          # if set to "true" but frees about 6 GB
-          tool-cache: false
-
-          # all of these default to true, but feel free to set to
-          # "false" if necessary for your workflow
+          # force to remove default tools
+          tool-cache: true
+          # preserve Android
           android: false
-          large-packages: false
-          docker-images: false
-          swap-storage: false
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
