--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@testing-library/react-hooks": "^8.0.1",
     "lottie-react-native": "^6.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
