--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -54,3 +54,22 @@ jobs:
 
       - name: Verify formatting
         run: yarn lint-clang
+  unit-tests:
+    name: 📖 Unit tests
+    runs-on: macOS-14
+    defaults:
+      run:
+        working-directory: ./ios/Tests
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install xcpretty
+        run: gem install xcpretty
+
+      - name: Run unit tests
+        run: "set -o pipefail && xcodebuild \
+          test \
+          -scheme Tests \
+          -only-testing TestsTests \
+          -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
+          CODE_SIGNING_ALLOWED=NO | xcpretty"
