--- a/docs/package.json
+++ b/docs/package.json
@@ -15,24 +15,25 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.0",
-    "@docusaurus/preset-classic": "2.4.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "lottie-react": "^2.3.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@docusaurus/core": "3.1.1",
+    "@docusaurus/preset-classic": "3.1.1",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
+    "lottie-react": "^2.4.0",
+    "prism-react-renderer": "^2.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@argos-ci/cli": "^1.0.0",
     "@argos-ci/playwright": "^1.0.1",
-    "@docusaurus/module-type-aliases": "2.4.0",
+    "@docusaurus/module-type-aliases": "3.1.1",
+    "@docusaurus/tsconfig": "3.1.1",
+    "@docusaurus/types": "3.1.1",
     "@playwright/test": "^1.39.0",
-    "@tsconfig/docusaurus": "^1.0.5",
     "cheerio": "^1.0.0-rc.12",
-    "markdownlint-cli2": "^0.7.1",
-    "typescript": "^4.7.4"
+    "markdownlint-cli2": "^0.12.1",
+    "typescript": "^5.2.2"
   },
   "browserslist": {
     "production": [
@@ -41,12 +42,12 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
