chore: don't prettify errors to understand why node can not finish bundling

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
-        run: "set -o pipefail && xcodebuild \
+        run: "xcodebuild \
           CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ \
           -derivedDataPath build -UseModernBuildSystem=YES \
           -workspace KeyboardControllerExample.xcworkspace \
@@ -84,4 +84,4 @@ jobs:
           -configuration Debug \
           -destination 'platform=iOS Simulator,name=iPhone 11 Pro' \
           build \
-          CODE_SIGNING_ALLOWED=NO | xcpretty"
+          CODE_SIGNING_ALLOWED=NO"
