--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -48,6 +48,8 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install node_modules for example/
         run: yarn install --frozen-lockfile --cwd ..
+      - name: Install root dependencies
+        run: yarn install --frozen-lockfile --cwd ../..
 
       - name: Restore buildcache
         uses: mikehardy/buildcache-action@v2
