--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -47,6 +47,8 @@ jobs:
             ${{ runner.os }}-fabric-yarn-
       - name: Install node_modules for FabricExample/
         run: yarn install --frozen-lockfile --cwd ..
+      - name: Install root dependencies
+        run: yarn install --frozen-lockfile --cwd ../..
 
       - name: Restore buildcache
         uses: mikehardy/buildcache-action@v2
