--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
@@ -20,7 +21,7 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "2.15.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.7.1",
+    "react-native-reanimated": "3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.1.9"
