chore: react-native 0.73 (#299)
## 📜 Description

Updated RN version to 0.73.

## 💡 Motivation and Context

To keep project up-to-date and assure that library can be integrated
into newest RN versions.

## 📢 Changelog

### JS
- use `@typescript-eslint/no-import-type-side-effects` as alternative to
`importsNotUsedAsValues`;
- re-worked example app for interactive ios keyboard (since
`automaticallyAdjustKeyboardInsets` has changed behavior since RN 0.73)

## 🤔 How Has This Been Tested?

Tested manually (both fabric & paper) on:
- iPhone 15 Pro (iOS 17.2, simulator);
- iPhone 11 (iOS 17.3, real device);
- Pixel 7 Pro (Android 14, emulator);
- Xiaomi Redmi note 5 Pro (Android 9, emulator).

## 📝 Checklist

- [x] CI successfully passed

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -45,6 +45,8 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install node_modules for example/
         run: yarn install --frozen-lockfile --cwd ..
+      - name: Install root dependencies
+        run: yarn install --frozen-lockfile --cwd ../..
 
       - name: Restore buildcache
         uses: mikehardy/buildcache-action@v2
