--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native/eslint-config": "^0.74.0",
+    "@react-native/eslint-config": "^0.73.2",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "clang-format": "^1.8.0",
@@ -82,15 +82,15 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^6.0.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.8.8",
     "react": "18.2.0",
-    "react-native": "0.72.11",
+    "react-native": "0.73.6",
     "react-native-builder-bob": "^0.18.0",
-    "react-native-reanimated": "3.6.1",
+    "react-native-reanimated": "3.8.0",
     "release-it": "^14.2.2",
-    "typescript": "^4.8.4"
+    "typescript": "5.0.4"
   },
   "peerDependencies": {
     "react": "*",
