--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "webpack serve --mode=development --config webpack.config.js",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "patch-package"
@@ -19,6 +20,7 @@
     "@react-navigation/stack": "^6.3.25",
     "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
     "react-native-keyboard-controller": "link:../",
@@ -26,10 +28,12 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-text-input-mask": "3.1.5",
-    "react-native-toast-message": "^2.1.9"
+    "react-native-toast-message": "^2.1.9",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.21",
@@ -41,10 +45,18 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.6.3",
     "patch-package": "^8.0.0",
-    "react-test-renderer": "18.2.0"
+    "react-test-renderer": "18.2.0",
+    "ts-loader": "^9.5.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.3"
   },
   "jest": {
     "preset": "react-native",
