--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -87,6 +87,12 @@ jobs:
         run: yarn build-example:ios
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
+      - name: Disk free
+        run: df -h
+      - name: Memory stat
+        run: top -l 1 -s 0 | grep PhysMem
+      - name: System stat
+        run: hostinfo
       - name: Test app
         working-directory: e2e
         run: yarn test-example:ios
