feat: free up RAM

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -96,6 +96,8 @@ jobs:
         run: top -l 1 -s 0 | grep PhysMem
       - name: System stat
         run: hostinfo
+      - name: Free up RAM
+        run: sudo purge
       - name: Test app
         working-directory: e2e
         run: yarn test-example:ios
