--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -40,8 +40,8 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "14.2"
-      - name: Install Rosetta
-        run: softwareupdate --install-rosetta --agree-to-license
+      # - name: Install Rosetta
+      #   run: softwareupdate --install-rosetta --agree-to-license
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Install AppleSimulatorUtils
