--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      - name: Get XCode version
+        id: xcode-version
+        run: echo "current=$(xcodebuild -version|tail -1|cut -f3 -d' ')" >> $GITHUB_OUTPUT
       - name: Restore node_modules from cache
         uses: actions/cache@v4
         id: yarn-cache
@@ -55,6 +58,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - uses: actions/cache@v4
+        name: Detox Framework Cache
+        id: detox-cache
+        with:
+          path: ~/Library/Detox/ios
+          key: ${{ runner.os }}-detox-framework-cache-${{ steps.xcode-version.outputs.current }}-v1
       - name: Install root dependencies
         run: yarn install
       - name: Install example project dependencies
@@ -80,6 +89,8 @@ jobs:
       - name: Install pods
         working-directory: ${{ env.WORKING_DIRECTORY }}/ios
         run: pod install
+      - name: Build Detox Framework Cache
+        run: yarn detox build-framework-cache
       - name: Build app
         working-directory: e2e
         run: yarn build-example:ios
