--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Run unit tests
         run: "set -o pipefail && xcodebuild \
           test \
-          -scheme Tests \
-          -only-testing TestsTests \
+          -scheme KeyboardControllerNative \
+          -only-testing KeyboardControllerNativeTests \
           -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
           CODE_SIGNING_ALLOWED=NO | xcpretty"
