--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "!android/gradlew",
     "!android/gradlew.bat",
     "!ios/build",
-    "!ios/Tests",
+    "!ios/KeyboardControllerNative",
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__"
