fix: try to specify XCode version?

--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -66,6 +66,10 @@ jobs:
       - name: Install xcpretty
         run: gem install xcpretty
 
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "15.2"
+
       - name: Run unit tests
         run: "set -o pipefail && xcodebuild \
           test \
