--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -68,7 +68,10 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "15.2"
+          xcode-version: "15.0"
+
+      - name: List of all devices
+        run: xcrun simctl list
 
       - name: Run unit tests
         run: "set -o pipefail && xcodebuild \
