--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -71,5 +71,5 @@ jobs:
           test \
           -scheme KeyboardControllerNative \
           -only-testing KeyboardControllerNativeTests \
-          -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.2' \
+          -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
           CODE_SIGNING_ALLOWED=NO | xcpretty"
