feat: iOS unit tests (#366)
## 📜 Description

Added native unit tests on iOS.

## 💡 Motivation and Context

### Where to write unit tests?

The problem with current integration of unit-tests on iOS is the fact
that we depends on `react` dependency heavily which is available in
`example` or `FabricExample` projects.

Of course I didn't want to duplicate tests (and there is no clear option
on how to add them for `KeyboardController.xcodeproj` i. e. root) so I
decided to create a new "HelloWorld" project and link files that I want
to test.

Fortunately current codebase is designed quite well (thanks for
supporting both architectures 😀), so I have a separated business-logic
(keyboard frame tracking etc.) and consumers (react views/bridge
bindings).

So I didn't make any modifications to the source code. The only one
"suspicious" thing is adding extension for `reactTag` property (I rely
on it in Extensions file and Extension file needs to be linked since
`ViewHierarchyNavigator` uses `UIResponder.current` extension).

### Unit tests approach

I decided to test everything as unit tests. Of course some of methods,
such as `becomeFirstResponder` doesn't work (actually they work, but
there is no way to check that method has been called as we can do in
jest - and by default iOS doesn't provide any mocks).

So I've created `TestableTextField`/`TestableTextView` and for hierarchy
creation used these classes.

Some of corresponding Android tests can not be ported to iOS:
- get all inputs -> relies on window usage, and actual window doesn't
contain any TextInputs -> most likely we need to pass params and pass a
mock from unit tests but I don't want to change source code right now
- testSetFocusToNextDoesNothingIfLastElement -> there is no way to check
that view keeps focus
- testSetFocusToPrevDoesNothingIfFirstElement -> there is no way to
check that view keeps focus

But overall I'm happy to have at least something to have a better


--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -54,3 +54,26 @@ jobs:
 
       - name: Verify formatting
         run: yarn lint-clang
+  unit-tests:
+    name: 📖 Unit tests
+    runs-on: macOS-14
+    defaults:
+      run:
+        working-directory: ./ios/KeyboardControllerNative
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "15.3"
+
+      - name: Install xcpretty
+        run: gem install xcpretty
+
+      - name: Run unit tests
+        run: "set -o pipefail && xcodebuild \
+          test \
+          -scheme KeyboardControllerNative \
+          -only-testing KeyboardControllerNativeTests \
+          -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
+          CODE_SIGNING_ALLOWED=NO | xcpretty"
