--- a/e2e/package.json
+++ b/e2e/package.json
@@ -25,14 +25,15 @@
   },
   "homepage": "https://github.com/kirillzyusko/react-native-keyboard-controller#readme",
   "devDependencies": {
+    "@types/async-retry": "^1.4.8",
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1",
+    "async-retry": "^1.3.3",
     "colors": "^1.4.0",
     "detox": "^20.19.0",
     "jest": "^29",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
-    "ts-jest": "^29.1.1",
-    "wait-for-expect": "^3.0.2"
+    "ts-jest": "^29.1.1"
   }
 }
