--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build-example:android": "detox build --configuration example.android.emu.release",
-    "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing --record-videos failing",
+    "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "build-example:ios": "detox build --configuration example.ios.sim.release",
-    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos failing",
+    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "detox-clean": "detox clean-framework-cache && detox build-framework-cache"
+    "detox-clean": "detox clean-framework-cache && detox build-framework-cache",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,9 @@
     "@types/pngjs": "^6.0.1",
     "async-retry": "^1.3.3",
     "colors": "^1.4.0",
-    "detox": "^20.19.0",
+    "detox": "^20.19.3",
     "jest": "^29",
+    "patch-package": "^8.0.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
     "ts-jest": "^29.1.1"
