--- a/example/package.json
+++ b/example/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.3.25",
     "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.0-rc.6",
     "react-native-gesture-handler": "2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
@@ -34,9 +34,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "^0.73.21",
-    "@react-native/metro-config": "^0.73.5",
-    "@react-native/typescript-config": "^0.73.1",
+    "@react-native/babel-preset": "0.74.77",
+    "@react-native/metro-config": "0.74.77",
+    "@react-native/typescript-config": "0.74.77",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
