--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.8.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.10.0-rc.1",
     "react-native-screens": "^3.29.0",
     "react-native-text-input-mask": "3.1.5",
     "react-native-toast-message": "^2.1.9"
