--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -20,12 +20,12 @@
     "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
     "react-native": "0.74.0-rc.6",
-    "react-native-gesture-handler": "2.15.0",
+    "react-native-gesture-handler": "2.16.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.8.0",
+    "react-native-reanimated": "3.9.0-nightly-20240402-12717cdb5",
     "react-native-safe-area-context": "^4.10.0-rc.1",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "^3.31.0-rc.0",
     "react-native-toast-message": "^2.1.9"
   },
   "devDependencies": {
