--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -23,7 +23,7 @@
     "react-native-gesture-handler": "2.16.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.9.0-nightly-20240402-12717cdb5",
+    "react-native-reanimated": "3.9.0-rc.0",
     "react-native-safe-area-context": "^4.10.0-rc.1",
     "react-native-screens": "^3.31.0-rc.0",
     "react-native-toast-message": "^2.1.9"
