try to pack manually

--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Pack
+        run: npm pack --json
       - name: Calculate size of package (current)
         id: new-size
         run: echo "NEW_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
