try to setup node

--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -24,6 +24,10 @@ jobs:
       #   id: old-size
       #   run: echo "OLD_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: yarn
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Pack
