--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 18.19.0
           cache: yarn
       - name: Install dependencies
         run: yarn install --frozen-lockfile
