--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.base.ref }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.19.0
+          cache: yarn
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Calculate size of package (target)
@@ -26,6 +30,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Pack
+        run: npm pack --json
       - name: Calculate size of package (current)
         id: new-size
         run: echo "NEW_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
