--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.15.0",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.8.0",
     "react-native-safe-area-context": "^4.9.0",
