--- a/example/package.json
+++ b/example/package.json
@@ -18,15 +18,15 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.0-rc.6",
-    "react-native-gesture-handler": "2.15.0",
+    "react-native": "0.74.0",
+    "react-native-gesture-handler": "2.16.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.8.0",
-    "react-native-safe-area-context": "^4.10.0-rc.1",
-    "react-native-screens": "^3.30.1",
+    "react-native-reanimated": "3.9.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-text-input-mask": "3.1.5",
     "react-native-toast-message": "^2.1.9"
   },
