--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -159,7 +159,7 @@ dependencies {
 
   implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
-  implementation("com.facebook.react:flipper-integration")
+  // implementation("com.facebook.react:flipper-integration")
 
   if (hermesEnabled.toBoolean()) {
     implementation("com.facebook.react:hermes-android")
