fix: extract artifact to necessary dir

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -94,6 +94,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: android-e2e-apk
+          path: example/android/app/build/outputs/apk/
+      - name: Verify path
+        run: ls -la android/app/build/outputs/apk/
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
