ci: run tests on more Android versions (#487)
## 📜 Description

Run e2e tests on Android 12.

## 💡 Motivation and Context

On Android API < 30 and API > 31 have absolutely different code for
handling keyboard. We constantly run tests for API=28, but since we have
conditional code for API 30+ it would be better to include the code for
that platform too.

In this PR I added this ability 😎 

Also I re-worked approach and now building and testing apk has different
jobs on CI (in order not to do the same work n-times).

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI

- added matrix strategy (test on API 28 and 31);
- split Android e2e job into building step and then run e2e tests from a
given apk;

### E2E

- `scrollDownUntilElementIsVisible` starts a gesture from the middle;
- move `e2e_emulator` assets to `e2e_emulator_28` folder;
- created `e2e_emulator_31` assets;
- added script for running separate tests;

## 🤔 How Has This Been Tested?

Tested on CI.

## 📸 Screenshots (if appropriate):

<img width="296" alt="image"
src="https://github.com/kirillzyusko/react-native-keyboard-controller/assets/22820318/f03e56d6-d194-4ee1-bdca-f21f6c3c94cb">

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -20,25 +20,16 @@ on:
       - "src/**"
 
 jobs:
-  test:
-    name: ⚙️ Automated test cases
+  build:
+    name: 🏗️ Build E2E apk
     runs-on: ubuntu-latest
-    timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
-      API_LEVEL: 28
     concurrency:
       group: android-e2e-${{ github.ref }}
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          # force to remove default tools
-          tool-cache: true
-          # preserve Android
-          android: false
       - uses: actions/setup-node@v4
         with:
           node-version: 18.x
@@ -78,6 +69,63 @@ jobs:
       - name: Build app
         working-directory: e2e
         run: yarn build-example:android
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-e2e-apk
+          path: example/android/app/build/outputs/apk/**
+
+  e2e-test:
+    name: ⚙️ Automated test cases
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    env:
+      WORKING_DIRECTORY: example
+    concurrency:
+      group: android-e2e-${{ matrix.devices.api }}-${{ github.ref }}
+      cancel-in-progress: true
+    strategy:
+      matrix:
+        devices: [{ api: 28, target: default }, { api: 31, target: default }]
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: android-e2e-apk
+          path: example/android/app/build/outputs/apk/
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # force to remove default tools
+          tool-cache: true
+          # preserve Android
+          android: false
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "yarn"
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: "microsoft"
+          java-version: "17"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      - name: Restore node_modules from cache
+        uses: actions/cache@v4
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install root dependencies
+        run: yarn install
+      - name: Install e2e dependencies
+        run: yarn install --cwd e2e
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -90,20 +138,20 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ env.API_LEVEL }}
+          key: avd-${{ matrix.devices.api }}
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
           working-directory: e2e
-          api-level: ${{ env.API_LEVEL }}
-          target: default
+          api-level: ${{ matrix.devices.api }}
+          target: ${{ matrix.devices.target }}
           profile: pixel_2
           ram-size: "4096M"
           disk-size: "10G"
           disable-animations: false
-          avd-name: e2e_emulator
+          avd-name: e2e_emulator_${{ matrix.devices.api }}
           arch: x86_64
-          script: yarn test-example:android
+          script: yarn test-example:android-${{ matrix.devices.api }}
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
