--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,8 +4,9 @@
   "description": "Set of E2E tests for react-native-keyboard-controller package",
   "main": "index.js",
   "scripts": {
-    "build-example:android": "detox build --configuration example.android.emu.release",
-    "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
+    "build-example:android": "detox build --configuration example.android.emu-28.release",
+    "test-example:android-28": "detox test --configuration example.android.emu-28.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
+    "test-example:android-31": "detox test --configuration example.android.emu-31.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "build-example:ios": "detox build --configuration example.ios.sim.release",
     "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test": "echo \"Error: no test specified\" && exit 1",
