fix: inline env var export

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -85,11 +85,9 @@ jobs:
         run: yarn build-example:ios
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
-      - name: Export SOFT_CHECK env variable
-        run: export SOFT_CHECK=false
       - name: Test app
         working-directory: e2e
-        run: yarn test-example:ios
+        run: SOFT_CHECK=false yarn test-example:ios
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
