e2e: use google_apis device (#488)
## 📜 Description

Enable tests on real Android image (not AOSP).

## 💡 Motivation and Context

The motivation is to execute tests on devices that are close to a real
one. AOSP has its own advantages, such as stable tests. However one year
later (since I added e2e tests support in GitHub) GitHub has upgraded
its runners and now we can run real Android images and it opens a new
opportunities:
- we can test interactive keyboard;
- potentially we can add tests that will change a type of the keyboard
(emoji).
- running a real image can assure we don't have bugs on real devcies
(not AOSP only).

But this addition comes with own price - existing e2e tests will fail,
because of asynchronous nature of "input focused" and
"onApplyWindowInsets" events. In not AOSP these events are asynchronous,
and current `KeyboardAwareScrollView` works in the next way:
- if focus was changed - be sure it's visible and perform animated
scroll;
- if keyboard was resized - check input is still visible if not perform
animated scroll.

And since these events are asynchronous - we can end up in various
states:
- we can scroll till the end, keyboard size becomes smaller and we don't
scroll;
- keyboard size becomes smaller and we just started to scroll -> in this
case we'll strictly match 50px `bottomOffset` constraint;

And because of that it's really hard to cover such functionality by e2e
tests. In this PR I added `SOFT_CHECK` variable - if it's `true`, then
we perform checks via matchers (since we can not assure pixel-perfect
precision).

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### E2E

- run tests on Google APIs image;

## 🤔 How Has This Been Tested?

Tested on CI.

## 📸 Screenshots (if appropri

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -86,7 +86,11 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        devices: [{ api: 28, target: default }, { api: 31, target: default }]
+        devices:
+          [
+            { api: 28, target: default, soft-check: false },
+            { api: 31, target: google_apis, soft-check: true },
+          ]
     needs: build
     steps:
       - uses: actions/checkout@v4
@@ -138,7 +142,7 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ matrix.devices.api }}
+          key: avd-${{ matrix.devices.api }}-${{ matrix.devices.target }}
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
@@ -151,7 +155,7 @@ jobs:
           disable-animations: false
           avd-name: e2e_emulator_${{ matrix.devices.api }}
           arch: x86_64
-          script: yarn test-example:android-${{ matrix.devices.api }}
+          script: SOFT_CHECK=${{ matrix.devices.soft-check }} yarn test-example:android-${{ matrix.devices.api }}
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
