--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -87,7 +87,7 @@ jobs:
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
       - name: Test app
         working-directory: e2e
-        run: yarn test-example:ios
+        run: SOFT_CHECK=false yarn test-example:ios
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
